2003-12-08  Karl Runge <runge@karlrunge.com>
	* add check for XKEYBOARD extension in configure.ac
	* support XBell events (disable: "-nobell"), "-nofb" in x11vnc

2003-11-07  Karl Runge <runge@karlrunge.com>
	* support "-inetd", "-noshm", "-flipbyteorder" in x11vnc

2003-10-26  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* released Version 0.6

2003-09-11  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.in, */Makefile.in, aclocal.m4,
	  bootstrap.sh, config.h.in, configure,
	  depcomp, install-sh, missing, mkinstalldirs,
	Removed auto-generated files from CVS.
	
2003-09-11  Mark McLoughlin  <mark@skynet.ie>

	* rdr/Exception.h, rdr/FdInStream.cxx, rdr/FdInStream.h,
	  rdr/FdOutStream.cxx, rdr/FdOutStream.h, rdr/FixedMemOutStream.h,
	  rdr/InStream.cxx, rdr/InStream.h, rdr/MemInStream.h,
	  rdr/MemOutStream.h, rdr/NullOutStream.cxx, rdr/NullOutStream.h,
	  rdr/OutStream.h, rdr/ZlibInStream.cxx, rdr/ZlibInStream.h,
	  rdr/ZlibOutStream.cxx, rdr/ZlibOutStream.h, rdr/types.h,
	  zrle.cxx, zrleDecode.h, zrleEncode.h: remove original
	C++ ZRLE implementation. Its been ported to C.

	* NEWS: copy the existing ChangeLog to here and make
	this a more detailed ChangeLog.