@@ -1,3 +1,7 @@
+2004-01-09  Karl Runge <runge@karlrunge.com>
+	* x11vnc options -allow, -localhost, -nodragging, -input_skip
+	* minimize memory usage under -nofb
+
 2003-12-08  Karl Runge <runge@karlrunge.com>
 	* add check for XKEYBOARD extension in configure.ac
 	* support XBell events (disable: "-nobell"), "-nofb" in x11vnc
